# ukpol-generator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/ukpol_generator/: __init__.py  __main__.py  cli.py
src/ukpol_generator/adapters/: json_narrowing.py  json_store.py  parliament_api.py  yaml_output.py
src/ukpol_generator/application/: __init__.py  fetch_contacts.py  generate_rules.py
src/ukpol_generator/domain/: __init__.py  models.py  parsing.py  platforms.py  rules.py
src/ukpol_generator/ports/: __init__.py  contacts.py  output.py
tests/: conftest.py  test_cli.py  test_json_store.py  test_parliament_api.py  test_parsing.py  test_rules.py  test_services.py  test_yaml_output.py
